# COSC363

./: README.md
Ass1/: CMakeLists.txt  Museum.cpp
Lab7/: Lab7.sln
Lab7/Debug/: Lab7.ilk
Lab7/Lab7/: Cylinder.cpp  Lab7.vcxproj  Lab7.vcxproj.filters  Plane.cpp  RayTracer.cpp
Lab7/Lab7/Debug/: raytracer.obj.enc  vc142.idb
Lab7/Lab7/Debug/Lab7.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lab7.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lab1/: CMakeLists.txt.user.133b40d  Model3D.cpp  Teapot.cpp  lab1.cpp  lab1.h  lab1.pro  lab1_global.h
lab1/Models_OFF/: Octahedron.off
lab2/: CMakeLists.txt.user.133b40d  Cannon.cpp  Humanoid.cpp
lab3/III_Yard/: CMakeLists.txt  Yard.cpp
lab3/II_RailWagon/: CMakeLists.txt  RailWagon.cpp
lab3/I_Train/: CMakeLists.txt  Train.cpp
lab3/build-III_Yard-Desktop-Default/: CMakeCache.txt  Yard.out  build.ninja  cmake_install.cmake  lab3.cbp  rules.ninja
lab3/build-II_RailWagon-Desktop-Default/: CMakeCache.txt  RailWagon.out  build.ninja  cmake_install.cmake  lab3.cbp  rules.ninja
lab3/build-I_Train-Desktop-Default/: CMakeCache.txt  Train.out  build.ninja  cmake_install.cmake  lab3.cbp  rules.ninja
